--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.12"
   }
 }
